# bookshelf

./: .gitignore  Book.tywi  Gemfile  HLint.hs  Makefile  README.md  Rakefile  books.json  bookshelf.cabal  index.html  package.json
app/: Main.hs
server/: README.md  server.cabal  stack.yaml
server/src/: Main.hs
server/src/BookServer/: API.hs  Database.hs  Server.hs  Types.hs
server/test/: ServerSpec.hs
src/: Book.hs  Component.elm  Component.hs  Lib.hs  Main.elm
static/scss/: style.scss
