name: server
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: TODO
description: TODO
category: TODO
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/bookshelf

executable server
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
      base -any
    , servant >= 0.4
    , servant-server >= 0.4
    , bytestring
    , text
    , aeson
    , either
    , transformers
    , warp
    , wai
    , wai-extra
    , wai-cors
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , server -any
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      Server
      ServerSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
